--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-telegram-bot-api": "^0.64.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "single-instance": "^0.0.1"
   }
 }
